Fixed mobile wrapping on frontpage

--- a/sitestyles.css
+++ b/sitestyles.css
@@ -45,6 +45,10 @@ h2 {
     cursor: pointer;
 }
 
+.boundary-box {
+    max-width: 100%;
+}
+
 .blurb{
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 16px;
@@ -91,6 +95,13 @@ h2 {
 
     .project {
         flex-direction: column;
+    }
+
+    .contact-links {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px
+        
     }
 }
 
